--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -15,7 +15,7 @@ $card-bg: #1E2233;
 
 // breakpoints
 $breakpoint-mobile: 768px; // small devices (landscape phones, 768px and up)
-$breakpoint-tablet: 1024px; // medium devices (tablets, 1024px and up)
+$breakpoint-tablet: 1280px; // medium devices (tablets, 1280px and up)
 
 // grid
 $grid-columns: 10;
