--- a/src/assets/styles/structures/card.scss
+++ b/src/assets/styles/structures/card.scss
@@ -9,6 +9,8 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  height: 100%;
+  overflow-y: auto;
   box-sizing: border-box;
 
   .card-title {
